--- a/drug_scraper/uses_code.ipynb
+++ b/drug_scraper/uses_code.ipynb
@@ -536,6 +536,74 @@
     "for cluster, uses in clusters_dict.items():\n",
     "    print(f\"Cluster {cluster}: {uses}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Uasi si mj cmiw lokngch', \"wasn't that fun\")"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cipher given in the image for encoding and decoding\n",
+    "cipher = {\n",
+    "    'a': 'm', 'b': 'n', 'c': 'b', 'd': 'v', 'e': 'c', 'f': 'x', 'g': 'z', 'h': 'a', 'i': 's',\n",
+    "    'j': 'd', 'k': 'f', 'l': 'g', 'm': 'h', 'n': 'j', 'o': 'k', 'p': 'l', 'q': 'p', 'r': 'o',\n",
+    "    's': 'i', 't': 'u', 'u': 'y', 'v': 't', 'w': 'r', 'x': 'e', 'y': 'w', 'z': 'q'\n",
+    "}\n",
+    "\n",
+    "# Reverse the cipher for decoding\n",
+    "decipher = {v: k for k, v in cipher.items()}\n",
+    "\n",
+    "# Function to encode plaintext message using the cipher\n",
+    "def encode_message(message, cipher):\n",
+    "    encoded_message = ''\n",
+    "    for char in message:\n",
+    "        if char.isalpha():  # encode only alphabetic characters\n",
+    "            is_upper = char.isupper()  # check if the character is uppercase\n",
+    "            char = char.lower()  # convert character to lowercase for cipher\n",
+    "            encoded_char = cipher[char]\n",
+    "            if is_upper:\n",
+    "                encoded_char = encoded_char.upper()  # convert back to uppercase if needed\n",
+    "        else:\n",
+    "            encoded_char = char  # keep non-alphabetic characters as is\n",
+    "        encoded_message += encoded_char\n",
+    "    return encoded_message\n",
+    "\n",
+    "# Function to decode ciphertext message using the cipher\n",
+    "def decode_message(message, decipher):\n",
+    "    decoded_message = ''\n",
+    "    for char in message:\n",
+    "        if char.isalpha():  # decode only alphabetic characters\n",
+    "            is_upper = char.isupper()  # check if the character is uppercase\n",
+    "            char = char.lower()  # convert character to lowercase for decipher\n",
+    "            decoded_char = decipher[char]\n",
+    "            if is_upper:\n",
+    "                decoded_char = decoded_char.upper()  # convert back to uppercase if needed\n",
+    "        else:\n",
+    "            decoded_char = char  # keep non-alphabetic characters as is\n",
+    "        decoded_message += decoded_char\n",
+    "    return decoded_message\n",
+    "\n",
+    "# Encode the message \"This is an easy problem\"\n",
+    "plaintext_message = \"This is an easy problem\"\n",
+    "encoded_message = encode_message(plaintext_message, cipher)\n",
+    "\n",
+    "# Decode the message \"rmij'u uamu xyj\"\n",
+    "ciphertext_message = \"rmij'u uamu xyj\"\n",
+    "decoded_message = decode_message(ciphertext_message, decipher)\n",
+    "\n",
+    "(encoded_message, decoded_message)\n"
+   ]
   }
  ],
  "metadata": {
