--- a/drug_scraper/uses_code.ipynb
+++ b/drug_scraper/uses_code.ipynb
@@ -604,6 +604,340 @@
     "\n",
     "(encoded_message, decoded_message)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The expected reaction time at 240°F is 2.90 hours.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the coefficients\n",
+    "intercept = 5.30\n",
+    "slope = -0.01\n",
+    "\n",
+    "# Temperature in degrees Fahrenheit\n",
+    "temperature = 240\n",
+    "\n",
+    "# Calculate the expected reaction time\n",
+    "reaction_time = intercept + slope * temperature\n",
+    "print(f\"The expected reaction time at {temperature}°F is {reaction_time:.2f} hours.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate expected reaction time for 240F\n",
+    "intercept = 5.30\n",
+    "slope = -0.01\n",
+    "temperature = 240\n",
+    "expected_reaction_time = intercept + slope * temperature\n",
+    "\n",
+    "# Standard deviation of the errors\n",
+    "sigma = 0.065\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected reaction time: 2.900 hours\n"
+     ]
+    }
+   ],
+   "source": [
+    "reaction_time = 5.30 - 0.01 * 240\n",
+    "print(f\"Expected reaction time: {reaction_time:.3f} hours\")  # To three decimal places\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected reaction time: 2.900 hours\n",
+      "Z-score for 2.75 hours: -2.31\n",
+      "Z-score for 3.05 hours: 2.31\n",
+      "Probability of one observation between 2.75 and 3.05 hours: 0.9790\n",
+      "Probability of five observations between 2.75 and 3.05 hours: 0.8992\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# Calculate Z scores for 2.75 and 3.05\n",
+    "Z_275 = (2.75 - expected_reaction_time) / sigma\n",
+    "Z_305 = (3.05 - expected_reaction_time) / sigma\n",
+    "\n",
+    "# Now calculate the probabilities for these Z scores\n",
+    "prob_275 = norm.cdf(Z_275)\n",
+    "prob_305 = norm.cdf(Z_305)\n",
+    "\n",
+    "# The probability of the reaction time being between 2.75 and 3.05 is the difference\n",
+    "probability = prob_305 - prob_275\n",
+    "\n",
+    "# Since we need the probability for five observations, we raise the single observation\n",
+    "# probability to the power of 5.\n",
+    "probability_five_observations = probability ** 5\n",
+    "\n",
+    "print(f\"Expected reaction time: {expected_reaction_time:.3f} hours\")\n",
+    "print(f\"Z-score for 2.75 hours: {Z_275:.2f}\")\n",
+    "print(f\"Z-score for 3.05 hours: {Z_305:.2f}\")\n",
+    "print(f\"Probability of one observation between 2.75 and 3.05 hours: {probability:.4f}\")\n",
+    "print(f\"Probability of five observations between 2.75 and 3.05 hours: {probability_five_observations:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.010508128113759367"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_275 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9894918718862407"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_305"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.900237342873559"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(.9896-.0104)**5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.10869565217391305\n",
+      "0.5437953125423168\n",
+      "Standard deviation of the difference: 0.092\n",
+      "Z-score for the expected difference: -0.11\n",
+      "Probability that the reaction time at the higher temperature exceeds the time at the lower temperature: 0.4562\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# Given standard deviation for one observation\n",
+    "sigma = 0.065\n",
+    "\n",
+    "# Calculate the standard deviation for the difference\n",
+    "sigma_diff = (2 ** 0.5) * sigma\n",
+    "sigma_diff = .092\n",
+    "# The expected difference in reaction time (negative because higher temperature\n",
+    "# should result in lower reaction time according to the regression model)\n",
+    "expected_difference = -0.01\n",
+    "\n",
+    "# Calculate the Z-score\n",
+    "Z = expected_difference / sigma_diff\n",
+    "print(Z)\n",
+    "Z = -.11\n",
+    "# Now calculate the probability that Y_{x+1} > Y_x\n",
+    "# This is 1 minus the probability that Y_{x+1} <= Y_x\n",
+    "# Which is the cumulative distribution value for -Z (because of the symmetry of the normal distribution)\n",
+    "probability = 1 - .5438\n",
+    "print(norm.cdf(-Z))\n",
+    "print(f\"Standard deviation of the difference: {sigma_diff:.3f}\")\n",
+    "print(f\"Z-score for the expected difference: {Z:.2f}\")\n",
+    "print(f\"Probability that the reaction time at the higher temperature exceeds the time at the lower temperature: {probability:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "650.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calc(x):\n",
+    "    y = 1800 + 1.3*x\n",
+    "    return y\n",
+    "\n",
+    "calc(2500) - calc(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance of Y2 - Y1: 245000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Standard deviation for y observations\n",
+    "sigma_y = 350\n",
+    "\n",
+    "# Variance for a single observation\n",
+    "var_y = sigma_y ** 2\n",
+    "\n",
+    "# Variance of the difference between y1 and y2\n",
+    "var_y1_y2 = 2 * var_y\n",
+    "\n",
+    "print(f\"Variance of Y2 - Y1: {var_y1_y2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma = 350"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7071067811865475"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1000 - 650) / ((2**.5)*sigma_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2389"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - .7611"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x2 needs to exceed x1 by at least: 887.15 psi to have P(Y2 > Y1) = 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# Given details\n",
+    "sigma = 350  # Standard deviation in psi\n",
+    "coefficient = 1.3\n",
+    "\n",
+    "# Z-score that corresponds to the desired probability\n",
+    "z_score_99 = norm.ppf(0.99)\n",
+    "\n",
+    "# Calculate the required difference in x\n",
+    "required_x_difference = (2.33 * sigma * (2 ** 0.5)) / coefficient\n",
+    "\n",
+    "print(f\"x2 needs to exceed x1 by at least: {required_x_difference:.2f} psi to have P(Y2 > Y1) = 0.99\")\n"
+   ]
   }
  ],
  "metadata": {
